@@ -76,6 +76,7 @@ Item {
             height: implicitHeight
             width: parent.width
             QtControls.Button {
+                width: parent.width * 3 / 12
                 text: i18n("Font")
                 iconName: "font"
 
@@ -98,6 +99,7 @@ Item {
                 }
             }
             QtControls.Button {
+                width: parent.width / 12
                 iconName: "format-indent-more"
 
                 onClicked: {
@@ -111,6 +113,7 @@ Item {
             }
 
             QtControls.Button {
+                width: parent.width / 12
                 iconName: "format-text-bold"
 
                 onClicked: {
@@ -123,6 +126,7 @@ Item {
                 }
             }
             QtControls.Button {
+                width: parent.width / 12
                 iconName: "format-text-italic"
 
                 onClicked: {
@@ -135,6 +139,7 @@ Item {
                 }
             }
             QtControls.Button {
+                width: parent.width / 12
                 iconName: "format-text-underline"
 
                 onClicked: {
@@ -147,6 +152,7 @@ Item {
                 }
             }
             QtControls.Button {
+                width: parent.width / 12
                 iconName: "format-text-strikethrough"
 
                 onClicked: {
@@ -160,6 +166,7 @@ Item {
             }
 
             QtControls.Button {
+                width: parent.width / 12
                 iconName: "format-justify-left"
 
                 onClicked: {
@@ -172,6 +179,7 @@ Item {
                 }
             }
             QtControls.Button {
+                width: parent.width / 12
                 iconName: "format-justify-center"
 
                 onClicked: {
@@ -184,6 +192,7 @@ Item {
                 }
             }
             QtControls.Button {
+                width: parent.width / 12
                 iconName: "format-justify-right"
 
                 onClicked: {
@@ -196,6 +205,7 @@ Item {
                 }
             }
             QtControls.Button {
+                width: parent.width / 12
                 iconName: "format-justify-fill"
 
                 onClicked: {
